--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,8 @@ jobs:
         run: |
           yarn install  # Install project dependencies
           touch .env.local
-          echo MONGO_URL=${{ secrets.MONGO_URL }} >> .env.local
-          echo JWT_SECRET=${{ secrets.JWT_SECRET }} >> .env.local
+          echo NEXT_PUBLIC_STRAPI_API_URL=${{ secrets.NEXT_PUBLIC_STRAPI_API_URL }} >> .env.local
+          echo NEXT_PUBLIC_STRAPI_API_TOKEN=${{ secrets.NEXT_PUBLIC_STRAPI_API_TOKEN }} >> .env.local
           yarn build  # Build Next.js app
 
       - name: Deploy via FTPS
