--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,11 +20,11 @@ jobs:
 
       - name: Install dependencies and build Next.js app
         run: |
-          yarn install  # Install project dependencies
+          npm install  # Install project dependencies
           touch .env.local
           echo NEXT_PUBLIC_STRAPI_API_URL=${{ secrets.NEXT_PUBLIC_STRAPI_API_URL }} >> .env.local
           echo NEXT_PUBLIC_STRAPI_API_TOKEN=${{ secrets.NEXT_PUBLIC_STRAPI_API_TOKEN }} >> .env.local
-          yarn build  # Build Next.js app
+          npm run build  # Build Next.js app
 
       - name: Deploy via FTPS
         uses: SamKirkland/FTP-Deploy-Action@4.3.3
